--- a/client/src/components/header/header.module.css
+++ b/client/src/components/header/header.module.css
@@ -116,10 +116,11 @@
 .code_frame {
   position: absolute;
   inset: 0;
-  z-index: 1;
+  z-index: 5;
   display: grid;
   place-content: center;
-  background-color: #00000047;
+  background-color: #00000074;
+  backdrop-filter: blur(5px);
 }
 
 .code_frame_input {
