--- a/client/src/components/hero_left/hero_left.module.css
+++ b/client/src/components/hero_left/hero_left.module.css
@@ -3,6 +3,8 @@
   height: 560px;
   width: 280px;
   position: relative;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .frame::after {
@@ -25,3 +27,20 @@
   width: fit-content;
   padding: 20px 0;
 }
+
+.frame .player_cards {
+  overflow: auto;
+  /* background-color: blue; */
+}
+
+.frame .player_cards::-webkit-scrollbar {
+  width: 4px;
+}
+
+.frame .player_cards::-webkit-scrollbar-thumb {
+  background-color: #5d5b5b93;
+}
+
+/* .frame .player_cards::-webkit-scrollbar-track {
+  background-color: #ff00007e;
+} */
