feat: added sync between viewers

--- a/client/src/components/player_detail_upload/player_detail_upload.module.css
+++ b/client/src/components/player_detail_upload/player_detail_upload.module.css
@@ -75,6 +75,10 @@
   font-weight: 800;
   box-shadow: 3px 3px 0px 0px #e99f4c;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
 .btn:hover {
