--- a/client/src/components/player_detail_upload/player_detail_upload.module.css
+++ b/client/src/components/player_detail_upload/player_detail_upload.module.css
@@ -54,6 +54,8 @@
   margin: 10px;
 }
 
+
+
 .form_style {
   outline: none;
   border: 2px solid #264143;
@@ -107,6 +109,20 @@
 
 .final_submit {
   grid-column: span 2;
+}
+
+.form_upload_image{
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: center; 
+  grid-column: span 2;
+}
+
+.form_upload_image > button{
+  width: 80%;
+  margin: auto;
+  margin-top: 1rem;
 }
 
 .final_submit > button {
